View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023280 | Community | OCCT:Foundation Classes | public | 2012-07-13 18:27 | 2012-11-16 13:17 |
Reporter | Pawel | Assigned To | Pawel | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | A | OS | L | ||
Product Version | 6.5.3 | ||||
Target Version | 6.5.4 | Fixed in Version | 6.5.4 | ||
Summary | 0023280: Pointer to local array is stored outside the scope of this array. | ||||
Description | In OSD_Real2String.cxx, line 113: the array 'buff' goes out of scope but the pointer 'str' is used anyway (method strtod, line 118). | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Corresponding git branch pushed. Please review. |
|
No remarks, please test |
|
Dear BugMaster, The workbenches KAS:dev:mkv-23280-occt (GIT branch CR23280) KAS:dev:mkv-23280-products (GIT master) were compiled on Linux platform and tested. Regression: Not detected Improvements: chl 922 R3 chl 934 P9 Testing case: Not needed See results in /QADisk/occttests/results/KAS/dev/mkv-23280-products_16072012/lin See reference results in /QADisk/occttests/results/KAS/dev/products-20120706-opt_06072012/lin See test cases in /QADisk/occttests/tests/ED |
Date Modified | Username | Field | Change |
---|---|---|---|
2012-07-13 18:27 | Pawel | New Issue | |
2012-07-13 18:27 | Pawel | Assigned To | => Pawel |
2012-07-13 18:30 | Pawel | Note Added: 0020973 | |
2012-07-13 18:30 | Pawel | Assigned To | Pawel => bugmaster |
2012-07-13 18:30 | Pawel | Status | new => resolved |
2012-07-13 18:33 | abv | Note Added: 0020974 | |
2012-07-13 18:33 | abv | Status | resolved => reviewed |
2012-07-16 13:27 |
|
Assigned To | bugmaster => mkv |
2012-07-17 11:37 | apn | Note Added: 0021002 | |
2012-07-17 11:38 | apn | Test case number | => Not needed |
2012-07-17 11:38 | apn | Assigned To | mkv => bugmaster |
2012-07-17 11:38 | apn | Status | reviewed => tested |
2012-07-23 15:03 | Pawel | Changeset attached | => occt master abd9003d |
2012-07-23 15:03 | Pawel | Assigned To | bugmaster => Pawel |
2012-07-23 15:03 | Pawel | Status | tested => verified |
2012-07-23 15:03 | Pawel | Resolution | open => fixed |
2012-11-16 13:14 | bugmaster | Fixed in Version | => 6.5.4 |
2012-11-16 13:17 | bugmaster | Status | verified => closed |