0023280: Pointer to local array is stored outside the scope of this array.

Moved the array 'buff' so it can be visible while 'str' still refers to it.